-optimized Unit tests functions and adapted their names